--- a/src/components/search-bar/search-bar.scss
+++ b/src/components/search-bar/search-bar.scss
@@ -14,7 +14,7 @@ search-bar {
 
     &.active {
       opacity: 1;
-      transform: translateX(290px);
+      transform: translateX(390px);
       width: 76%;
     }
   }
